--- a/views/index.jade
+++ b/views/index.jade
@@ -7,9 +7,14 @@ block append head
   script(type="text/javascript", src="/js/main.js")
 
 block append bodyscripts
+  img#wifi-bar(src="/img/Wifi Bar-01.png")
+  img#time-bar(src="/img/Time Bar-01.png")
+  img#location-bar(src="/img/Location Bar-01.png")
+
   script.
     google.maps.event.addDomListener(window, 'load', initialize);
 
 block content
   div#map-canvas
   div#dronestream(width=1440, height=800)
+  
