--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="/js/jquery.fullscreen-min.js"></script>
   <script type="text/javascript" src="/js/polyfills.js"></script>
   <script type="text/javascript" src="/js/cockpit.js"></script>
+  <script type="text/javascript" src="/js/map.js"></script>
   <!--<script type="text/javascript" src="/js/jquery.notifyBar.js"></script>!-->
   <% for(var i=0; i<scripts.length; i++) {%>
   <script type="text/javascript" src="<%= scripts[i] %>"></script><% } %>
