--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
   <script type="text/javascript" src="/js/polyfills.js"></script>
   <script type="text/javascript" src="/js/cockpit.js"></script>
   <script type="text/javascript" src="/js/vr.js"></script>
+  <script type="text/javascript" src="/js/gl-matrix.js"></script>
   <script type="text/javascript" src="/js/jquery.notifyBar.js"></script>
   <script type="text/javascript" src="/js/map.js"></script>
   <% for(var i=0; i<scripts.length; i++) {%>
