Removed oculus plugin in favor of Janus VR.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,9 +19,8 @@
   <script type="text/javascript" src="/js/polyfills.js"></script>
   <script type="text/javascript" src="/js/cockpit.js"></script>
   <script type="text/javascript" src="/js/vr.js"></script>
-  <script type="text/javascript" src="/js/gl-matrix.js"></script>
   <script type="text/javascript" src="/js/jquery.notifyBar.js"></script>
-  <script type="text/javascript" src="/js/map.js"></script>
+  <!--<script type="text/javascript" src="/js/map.js"></script>-->
   <% for(var i=0; i<scripts.length; i++) {%>
   <script type="text/javascript" src="<%= scripts[i] %>"></script><% } %>
 
@@ -34,6 +33,7 @@
         </div>
       </div>
     </div>
+    <div id="status"></div>
     <script>
       var cockpit = new Cockpit();
     </script>
