--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
               <div id="location-bar-div" class="image">
                 <img src="/img/Time Bar-01.png" id="time-bar"></div>
               <div id="location-bar" class="image">
-                <img src="/img/Location Bar-01.png">
+                <img src="/img/Location-Bar.gif">
                 <h2><span>Ann Arbor, MI</span></h2>
               </div>
                 
