--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,13 +36,11 @@
               <div id="location-bar-div" class="image">
                 <img src="/img/Wifi Bar-01.png" id="wifi-bar"></div>
               <div id="location-bar-div" class="image">
-                <img src="/img/Time Bar-01.png" id="time-bar"></div>
+                <img src="/img/Time-Bar.gif" id="time-bar"></div>
               <div id="location-bar" class="image">
                 <img src="/img/Location-Bar.gif">
                 <h2><span>Ann Arbor, MI</span></h2>
               </div>
-                
-
             </div>
             <div class="bottom" id="map-canvas">
               <!-- <img src="/img/Map Marker-01.png" id="location indicator">! --></div>
