--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,8 @@
               </div>
             </div>
             <div class="bottom" id="map-canvas">
-              <!-- <img src="/img/Map Marker-01.png" id="location indicator">! --></div>
+                <img src="/img/Map-Animation.gif">
+              </div>
           </div>
         </div>
       </div>
