--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,5 +52,16 @@
   </div>
   <div id="status"></div>
   <script>var cockpit = new Cockpit();</script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script type="text/javascript">
+  $(document).ready(
+    setTimeout(
+      function() 
+      {
+        $('#location-bar h2 span').fadeIn();
+        
+      }, 1000)
+  );
+  </script>
 </body>
 </html>
