--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,26 +33,51 @@
         <div id="cockpit">
           <div id="hud-overlay">
             <div class="bottom" id="bottom-bar">
-              <div id="location-bar-div" class="image">
-                <img src="/img/Wifi Bar-01.png" id="wifi-bar"></div>
+              <div id="wifi-bar" class="image">
+                <img src="/img/Wifi Bar-01.png">
+                <h2 id="win-count"><span>0</span></h2>
+                <svg id="the-svg" version="1.0" xmlns:xlink="http://www.w3.org/1999/xlink" width="25px" height="25px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;">
+                  <path d="M41.886,30.017c-0.272-0.826-0.981-1.416-1.851-1.54l-8.973-1.281l-4.01-7.993c-0.036-0.072-0.077-0.142-0.121-0.209
+  C28.363,18.891,29.5,17.587,29.5,16v-2c0-0.299-0.131-0.567-0.339-0.75l7.486-4.383c0.029-0.017,0.058-0.035,0.085-0.055
+  C38.025,7.868,39,6.135,39,4.78V1c0-0.552-0.447-1-1-1H12c-0.552,0-1,0.448-1,1v3.78c0,1.354,0.975,3.087,2.267,4.031
+  c0.027,0.02,0.056,0.039,0.084,0.055l7.488,4.383C20.631,13.433,20.5,13.701,20.5,14v2c0,1.587,1.136,2.891,2.567,2.994
+  c-0.044,0.067-0.085,0.137-0.122,0.21l-4.009,7.992l-8.973,1.281c-0.855,0.122-1.582,0.727-1.852,1.541
+  c-0.27,0.822-0.04,1.74,0.585,2.339l6.482,6.215l-1.529,8.771c-0.148,0.853,0.212,1.728,0.919,2.23
+  C14.962,49.853,15.426,50,15.91,50c0.366,0,0.732-0.088,1.061-0.256L25,45.593l8.026,4.149c0.746,0.39,1.715,0.323,2.401-0.17
+  c0.708-0.503,1.069-1.379,0.921-2.231l-1.529-8.771l6.479-6.213C41.928,31.759,42.158,30.84,41.886,30.017z M14.409,7.168
+  C13.6,6.556,13,5.412,13,4.78V2h24v2.78c0,0.632-0.601,1.776-1.409,2.388l-9.238,5.408c-0.029,0.017-0.059,0.036-0.086,0.056
+  c-0.305,0.223-0.743,0.357-1.205,0.368h-0.124c-0.461-0.011-0.899-0.145-1.204-0.368c-0.028-0.021-0.056-0.039-0.086-0.057
+  L14.409,7.168z M22.5,16v-1h5v1c0,0.542-0.344,1-0.75,1h-3.5C22.843,17,22.5,16.542,22.5,16z M39.917,30.912l-6.867,6.583
+  c-0.24,0.23-0.35,0.565-0.293,0.894l1.621,9.296c0.018,0.097-0.025,0.198-0.112,0.26c-0.137,0.099-0.238,0.064-0.318,0.022
+  l-8.488-4.389c-0.287-0.147-0.629-0.147-0.918,0l-8.486,4.388c-0.083,0.044-0.186,0.076-0.326-0.022
+  c-0.083-0.06-0.125-0.16-0.108-0.258l1.621-9.296c0.057-0.328-0.053-0.663-0.293-0.894l-6.867-6.584
+  c-0.074-0.07-0.1-0.174-0.069-0.268c0.033-0.099,0.125-0.172,0.235-0.188l9.491-1.355c0.324-0.047,0.605-0.249,0.752-0.542
+  l4.243-8.459C24.758,20.051,24.864,20,25,20s0.242,0.051,0.266,0.1l4.244,8.459c0.146,0.293,0.428,0.495,0.752,0.542l9.491,1.355
+  c0.11,0.016,0.203,0.09,0.234,0.185C40.019,30.737,39.993,30.84,39.917,30.912z"></path>
+                </svg>
+              </div>
               <div id="time-bar" class="image">
                 <img src="/img/Time-Bar.gif">
-                <h2 id="time"><span style="display: none;">12:34 AM</span></h2>
+                <h2 id="time">
+                  <span style="display: none;">12:34 AM</span>
+                </h2>
               </div>
               <div id="location-bar" class="image">
                 <img src="/img/Location-Bar.gif">
-                <h2><span style="display: none;">Ann Arbor, MI</span></h2>
+                <h2>
+                  <span style="display: none;">Ann Arbor, MI</span>
+                </h2>
               </div>
+
             </div>
             <div class="bottom" id="map-canvas">
-              <img src="/img/Map-Animation.gif">
-            </div>
+              <img src="/img/Map-Animation.gif"></div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div id="status"> </div>
+  <div id="status"></div>
   <script>var cockpit = new Cockpit();</script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript">
@@ -96,6 +121,14 @@ $(document).ready(function()
 {
    setInterval('updateClock()', 1000);
 });
+
+var counter = 0;
+$().ready(function() {
+  $('body').on("click", function() {
+      counter++;
+      $('#win-count span').text(counter);
+  })
+})
   </script>
 </body>
 </html>
